--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <div class="container-fluid text-center">
       <h1 class="mt-5">Hello Rigo!</h1>
       <img src="./assets/img/rigo-baby.jpg" />
-      <p id="excuse">My dog ate my homework
+      <p id="excuse">
         If this text is <b>not</b> centered and <b>yellow</b>, you probably have
         an error
       </p>
